# inline-it

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
extra/: CMakeLists.txt  fmt.cmake  tclap.cmake
src/: CMakeLists.txt  commandline.cpp  commandline.h  inline-it.cpp
tools/: build.sh  package.bat  package.sh
